# ttLibC

./: .gitignore  .gitmodules  3causeBSD.txt  AUTHORS  CMakeLists.txt  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.status  configure  configure.ac  cuteTest.xml  ttLibC.pc  ttLibC.pc.in
cuteSrc/: Makefile  Makefile.am  Makefile.in  audioTest.cpp  avcodecTest.cpp  containerTest.cpp  cuteTest  cuteTest.cpp  encoderDecoderTest.cpp  netTest.cpp  utilTest.cpp  videoTest.cpp  webrtcTest.cpp
gtest/: CMakeLists.txt  decoder.hpp  encoder.cpp  encoder.hpp  frame.cpp  reader.hpp  resampler.cpp  resampler.hpp  test.cpp  test.hpp  util.cpp  util.hpp  writer.hpp
gtest/decoder/: audioConverter.cpp
gtest/encoder/: fdkaac.cpp  msaac.cpp  msh264.cpp  openh264.cpp  x264.cpp  x265.cpp
gtest/reader/: flv.cpp  mkv.cpp  mp4.cpp  mpegts.cpp
gtest/resampler/: image.cpp  imageResizer.cpp  libyuv.cpp  msAudio.cpp  msImage.cpp  swscale.cpp
gtest/util/: audioUnitRecorder.cpp  crc32.cpp  hex.cpp  mmAudioLoopback.cpp  msAudioCapturer.cpp  msGlobal.cpp  msVideoCapturer.cpp
gtest/writer/: flv.cpp  mkv.cpp  mp4.cpp  mpegts.cpp
ttLibC/: Makefile  Makefile.am  Makefile.in  _log.h  allocator.c  allocator.h  log.h  log.h.in  ttLibC.c  ttLibC.h  ttLibC_common.h  ttLibC_predef.h
ttLibC/container/: container.c  container.h  containerCommon.h  flv.h  misc.c  misc.h  misc2.c  mkv.h  mp3.h  mp4.h  mpegts.h
ttLibC/container/flv/: flvReader.c  flvReader.h  flvTag.c  flvTag.h  flvWriter.c  flvWriter.h
ttLibC/container/flv/type/: audioTag.c  audioTag.h  headerTag.c  headerTag.h  metaTag.c  metaTag.h  videoTag.c  videoTag.h
ttLibC/container/mkv/: mkvReader.c  mkvReader.h  mkvTag.c  mkvTag.h  mkvWriter.c  mkvWriter.h
ttLibC/container/mkv/type/: simpleBlock.c  simpleBlock.h
ttLibC/container/mp3/: mp3Frame.c  mp3Frame.h  mp3Reader.c  mp3Reader.h  mp3Writer.c  mp3Writer.h
ttLibC/container/mp4/: mp4Atom.c  mp4Atom.h  mp4Reader.c  mp4Reader.h  mp4Writer.c  mp4Writer.h
ttLibC/container/mp4/type/: ctts.c  ctts.h  elst.c  elst.h  stco.c  stco.h  stsc.c  stsc.h  stsz.c  stsz.h  stts.c  stts.h  trun.c  trun.h
ttLibC/container/mpegts/: mpegtsPacket.c  mpegtsPacket.h  mpegtsReader.c  mpegtsReader.h  mpegtsWriter.c  mpegtsWriter.h
ttLibC/container/mpegts/type/: pat.c  pat.h  pes.c  pes.h  pmt.c  pmt.h  sdt.c  sdt.h
ttLibC/container/mpegts2/: mpegtsPacket.c  mpegtsPacket.h  mpegtsReader.c  mpegtsReader.h  mpegtsWriter.c  mpegtsWriter.h
ttLibC/container/mpegts2/type/: pat.c  pat.h  pes.c  pes.h  pmt.c  pmt.h  sdt.c  sdt.h
ttLibC/decoder/: audioConverterDecoder.c  audioConverterDecoder.h  avcodecDecoder.c  avcodecDecoder.h  jpegDecoder.c  jpegDecoder.h  mp3lameDecoder.c  mp3lameDecoder.h  openh264Decoder.cpp  openh264Decoder.h  opusDecoder.c  opusDecoder.h  pngDecoder.c  pngDecoder.h  speexDecoder.c  speexDecoder.h  theoraDecoder.c  theoraDecoder.h  vorbisDecoder.c  vorbisDecoder.h  vtDecompressSessionDecoder.c  vtDecompressSessionDecoder.h  vtDecompressSessionH264Decoder.c  vtDecompressSessionH264Decoder.h
ttLibC/encoder/: audioConverterEncoder.c  audioConverterEncoder.h  avcodecEncoder.c  avcodecEncoder.h  faacEncoder.c  faacEncoder.h  fdkaacEncoder.c  fdkaacEncoder.h  jpegEncoder.c  jpegEncoder.h  mp3lameEncoder.c  mp3lameEncoder.h  msAacEncoder.cpp  msAacEncoder.h  msH264Encoder.cpp  msH264Encoder.h  openh264Encoder.cpp  openh264Encoder.h  opusEncoder.c  opusEncoder.h  speexEncoder.c  speexEncoder.h  theoraEncoder.c  theoraEncoder.h  vorbisEncoder.c  vorbisEncoder.h  vtCompressSessionEncoder.c  vtCompressSessionEncoder.h  vtCompressSessionH264Encoder.c  vtCompressSessionH264Encoder.h  x264Encoder.c  x264Encoder.h  x265Encoder.c  x265Encoder.h
ttLibC/frame/: frame.c  frame.h
ttLibC/frame/audio/: aac.c  aac.h  aac2.c  aac2.h  adpcmImaWav.c  adpcmImaWav.h  audio.c  audio.h  mp3.c  mp3.h  nellymoser.c  nellymoser.h  opus.c  opus.h  pcmAlaw.c  pcmAlaw.h  pcmMulaw.c  pcmMulaw.h  pcmf32.c  pcmf32.h  pcms16.c  pcms16.h  speex.c  speex.h  vorbis.c  vorbis.h
ttLibC/frame/video/: bgr.c  bgr.h  flv1.c  flv1.h  h264.c  h264.h  h265.c  h265.h  jpeg.c  jpeg.h  png.c  png.h  theora.c  theora.h  video.c  video.h  vp6.c  vp6.h  vp8.c  vp8.h  vp9.c  vp9.h  wmv1.c  wmv1.h  wmv2.c  wmv2.h  yuv420.c  yuv420.h
ttLibC/net/: net.c  net.h  netCommon.h  rtmp.h  tcp.c  tcp.h  tcpmisc.h  tetty.h  udp.c  udp.h
ttLibC/net/client/: rtmp.h  webrtc.h  websocket.h
ttLibC/net/client/rtmp/: header.c  header.h  message.c  message.h  netConnection.c  netConnection.h  netStream.c  (+5 more)
ttLibC/net/rtmp/: header.c  header.h  message.c  message.h  netConnection.c  netConnection.h  netStream.c  netStream.h
ttLibC/net/server/: tcp.c  tcp.h
ttLibC/net/tetty/: bootstrap.c  bootstrap.h  context.c  context.h  promise.c  promise.h
ttLibC/net/tetty2/: tcpBootstrap.c  tcpBootstrap.h
ttLibC/resampler/: audioResampler.c  audioResampler.h  imageResampler.c  imageResampler.h  imageResizer.c  imageResizer.h  imageScaler.c  imageScaler.h  libyuvResampler.c  libyuvResampler.h  msAudioResampler.cpp  msAudioResampler.h  msAudioResampler.hpp  msImageResampler.cpp  msImageResampler.h  msImageResampler.hpp  soundtouchResampler.cpp  soundtouchResampler.h  speexdspResampler.c  speexdspResampler.h  swresampleResampler.c  swresampleResampler.h  swscaleResampler.c  swscaleResampler.h
ttLibC/util/: amfUtil.c  amfUtil.h  audioUnitRecorderUtil.cpp  audioUnitRecorderUtil.h  audioUnitRecorderUtil.hpp  audioUnitUtil.c  audioUnitUtil.h  beepUtil.c  beepUtil.h  bit.c  bit.h  bitUtil.c  bitUtil.h  byteUtil.c  byteUtil.h  crc32Util.c  crc32Util.h  dynamicBufferUtil.c  dynamicBufferUtil.h  flvFrameUtil.c  flvFrameUtil.h  forkUtil.c  forkUtil.h  hexUtil.c  hexUtil.h  httpUtil.c  httpUtil.h  ioUtil.c  ioUtil.h  linkedListUtil.c  linkedListUtil.h  mmAudioLoopbackUtil.cpp  mmAudioLoopbackUtil.h  msAudioCapturerUtil.cpp  msAudioCapturerUtil.h  msGlobalUtil.cpp  msGlobalUtil.h  msGlobalUtilCommon.h  msVideoCapturerUtil.cpp  msVideoCapturerUtil.h  (+10 more)
ttLibC/util/tetty2/: bootstrap.c  bootstrap.h  context.c  context.h  promise.c  promise.h
(+119 files in other folders)
